# projspec

./: .gitignore  AGENTS.md  README.md  conda-project.yml  environment.yml  pixi.toml  pyproject.toml
.github/workflows/: main.yaml
docs/: environment.yml
docs/source/: api.rst  code-of-conduct.rst  config.rst  contributing.rst  index.rst  intro.rst  quickstart.rst  ui.rst
example/: demo.ipynb
projspec-rs/: CODEGEN.md  Cargo.toml
projspec-rs/src/: artifact.rs  cli.rs  config.rs  content.rs  create.rs  fs.rs  lib.rs  library.rs  main.rs  project.rs  spec.rs  types.rs
pycharm_plugin/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
pycharm_plugin/.run/: Run Plugin.run.xml
pycharm_plugin/gradle/: libs.versions.toml
qtapp/: README.md  emoji.py  main.py  views.py
recipe/: meta.yaml
src/projspec/: __init__.py  __main__.py  config.py  html.py  library.py  tools.py  utils.py
src/projspec/artifact/: __init__.py  base.py  container.py  deployment.py  infra.py  installable.py  linter.py  process.py  python_env.py
src/projspec/content/: __init__.py  base.py  cicd.py  data.py  data_html.py  env_var.py  environment.py  executable.py  license.py  linter.py  metadata.py  package.py  vcs.py
src/projspec/proj/: __init__.py  _consolidate.py  ai.py  anaconda_project.py  backstage.py  base.py  briefcase.py  cicd.py  data_dir.py  (+27 more)
tests/: test_anaconda_project.py  test_basic.py  test_cli.py  test_conda_workspace.py  test_config.py  test_croissant.py  test_data_html.py  test_data_project.py  test_ipywidget_helpers.py  test_library.py  test_marimo.py  test_new_specs.py  test_panel.py  test_qtapp_helpers.py  test_roundtrips.py  test_scan_glob.py  test_textapp_helpers.py  test_tools.py  test_utils.py  test_vcs.py  test_webapp.py  test_webui.py
textapp/: README.md  main.py
vsextension/: ACTIONS.md  README.md  package-lock.json  package.json
vsextension/src/: extension.ts  panel.ts  projspec.ts  sidebarView.ts
(+28 files in other folders)
